SERVER-74793 dbCheck should not fail when detecting corruption

(cherry picked from commit 9a03e1930b2ffe150f21ac9836a70d799e353015)